# wsl-usb-gui

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  CLAUDE.md  MANIFEST.in  README.md  build_msi.ps1  pyoxidizer.bzl  pyproject.toml  usbipd-win_3.1.0.msi  usbipd-win_3.2.0.msi  usbipd-win_4.0.0.msi  usbipd-win_5.1.0_x64.msi
.github/workflows/: build.yml  build_msi.yml
wsl_usb_gui/: __main__.py  gui.py  install.py  logger.py  usb_monitor.py  version.py
wsl_usb_gui/win_usb_inspect/: __init__.py  winusbclasses.py
